# slick_benchmark

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  report.md  results.csv  results_var.csv
docs/: architecture.md  hash_schemes.md  report.md  report_v2.md  resources.md  setup.md  slick_fix_analysis.md
results/: results_var.csv
scripts/: bench.py  bench_headless.py  download_data.py  lf_growth.py  var.py
src/: hash_utils.rs  lib.rs  main.rs  trait_def.rs
src/datasets/: mod.rs  norvig.rs  sequential.rs  uniform.rs  wikipedia.rs  zipf.rs
src/implns/: cuckoo.rs  linear.rs  mod.rs  quadratic.rs  slick.rs  std_set.rs
src/metrics/: mod.rs  record.rs
src/runner/: bench.rs  mod.rs
src/workloads/: bulk.rs  mixed.rs  mod.rs  read_heavy.rs
