[package]
name = "slickbench"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
